# https://pypi.org/project/setupcfg-generator/
[metadata]
name = launchd-exec
version = 2019.3.22
url = https://github.com/looking-for-a-job/launchd-exec
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = launchd exec

[options]
install_requires = 
	setuptools
scripts = 
	scripts/launchd-exec
